# MutiProjects

./: .env  README.md  app.py  config.py  document_loader_demo.py  embedding_demo.py  main.py  prompt_template_demo.py  pyproject.toml  pyvenv.cfg  readme.md  semantic_demo.py
