[project]
name = "multiprojects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
]
